<resources>
    <string name="app_name">My Application</string>
    <string name="button_JDI">JUST DO IT</string>
    <string name="editTxt">Enter message</string>
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_mul">x</string>
    <string name="button_div">/</string>
    <string name="button_add">+</string>
    <string name="button_sub">-</string>
    <string name="button_equals">=</string>
    <string name="button_clear">CE</string>
    <string name="delete">C</string>

</resources>
