<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DisplayTextActivity" tools:layout_editor_absoluteY="81dp">

    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textSize="18sp" android:onClick="prevActivity"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"/>
    <EditText
            android:layout_width="217dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/resultView"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="54dp" app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <android.support.v7.widget.GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gridLayout"
            app:rowOrderPreserved="false"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/resultView"
            app:layout_constraintVertical_bias="0.271">

        <Button
                android:text="@string/button_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button2" app:layout_column="1"
                app:layout_row="4" app:layout_columnSpan="2" app:layout_gravity="fill_horizontal"/>
        <Button
                android:onClick="updateNumberView"
                android:text="@string/button_mul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button_mul" app:layout_column="4"
                app:layout_row="0"/>
        <Button
                android:onClick="updateNumberView"
                android:text="@string/button_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="259dp"
                tools:layout_editor_absoluteX="16dp" android:id="@+id/button_3" app:layout_column="2"
                app:layout_row="0"/>
        <Button
                android:onClick="updateNumberView"
                android:text="@string/button_2"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="181dp"
                tools:layout_editor_absoluteX="16dp" android:id="@+id/button_2" android:layout_width="wrap_content"
                app:layout_column="1" app:layout_row="0"/>
        <Button
                android:onClick="updateNumberView"
                android:text="@string/button_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="331dp"
                tools:layout_editor_absoluteX="16dp" android:id="@+id/button_4" app:layout_column="0"
                app:layout_row="1"/>
        <Button
                android:onClick="updateNumberView"
                android:text="@string/button_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="181dp"
                tools:layout_editor_absoluteX="136dp" android:id="@+id/button_5" app:layout_column="1"
                app:layout_row="1"/>
        <Button
                android:onClick="updateNumberView"
                android:text="@string/button_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="259dp"
                tools:layout_editor_absoluteX="136dp" android:id="@+id/button_6" app:layout_column="2"
                app:layout_row="1"/>
        <Button
                android:onClick="updateNumberView"
                android:text="@string/button_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="181dp"
                tools:layout_editor_absoluteX="255dp" android:id="@+id/button_7" app:layout_column="0"
                app:layout_row="2"/>
        <Button
                android:onClick="updateNumberView"
                android:text="@string/button_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="259dp"
                tools:layout_editor_absoluteX="255dp" android:id="@+id/button_8"/>
        <Button
                android:onClick="updateNumberView"
                android:text="@string/button_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="331dp"
                tools:layout_editor_absoluteX="255dp" android:id="@+id/button_1" app:layout_column="0"
                app:layout_row="0"/>
        <Button
                android:onClick="updateNumberView"
                android:text="@string/button_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="331dp"
                tools:layout_editor_absoluteX="136dp" android:id="@+id/button_9" app:layout_column="2"
                app:layout_row="2"/>
        <Button
                android:onClick="updateNumberView"
                android:text="@string/button_div"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_row="1" app:layout_column="4"
                android:id="@+id/button_div"/>
        <Button
                android:onClick="updateNumberView"
                android:text="@string/button_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_row="3" app:layout_column="4"
                android:id="@+id/button_sub"/>
        <Button
                android:onClick="updateNumberView"
                android:text="@string/button_equals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_row="3" app:layout_column="2"
                android:id="@+id/button_equals"/>
        <Button
                android:onClick="updateNumberView"
                android:text="@string/button_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_row="2" app:layout_column="4"
                android:id="@+id/button_add"/>
        <Button
                android:onClick="updateNumberView"
                android:text="@string/button_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_row="3" app:layout_column="0"
                android:id="@+id/button_0" app:layout_columnSpan="2" app:layout_gravity="fill_horizontal"/>
    </android.support.v7.widget.GridLayout>
</android.support.constraint.ConstraintLayout>